[package]
name = "rs-nic-names"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[bin]]
name = "nic-names"

[dependencies.netdev]
version = "0"
default-features = false
features = [
	"gateway",
	"serde",
]

[dependencies.clap]
version = "4"
features = ["derive"]
