[package]
name = "rs-nic-names"
version = "0.1.0"
edition = "2024"

description = "Prints the name of the nics."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-nic-names"
homepage = "https://github.com/takanoriyanagitani/rs-nic-names"
documentation = "https://docs.rs/rs-nic-names/latest"
keywords = ["network", "nic", "name", "interface", "netdev"]
categories = ["command-line-utilities"]

exclude = [
	"nic-names",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[bin]]
name = "nic-names"

[dependencies.netdev]
version = "0"
default-features = false
features = [
	"gateway",
	"serde",
]

[dependencies.clap]
version = "4"
features = ["derive"]
